--- a/.github/workflows/05-dependency.yaml
+++ b/.github/workflows/05-dependency.yaml
@@ -1,5 +1,11 @@
 name: Dependency
-on: [push] # triggers
+on: # triggers
+  push:
+    paths:
+      - '.github/workflows/05-dependency.yaml'
+  pull_request:
+    paths:
+      - '.github/workflows/05-dependnecy.yaml'
 jobs:
   job-1:
     runs-on: ubuntu-latest
@@ -26,3 +32,10 @@ jobs:
     steps:
       - name: Step4
         run: echo "Hi, This is from job 4"
+
+  job-5:
+    needs: job-3
+    runs-on: ubuntu-latest
+    steps:
+      - name: Step5
+        run: echo " Hi, This is from Job-5"
